--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
   <h1>Olá, mundo!</h1>
-  <script src="script.js"></script>
+  <script src="Estimulo_ICE.js"></script>
 </body>
 </html>
